# advent-of-code

./: LICENSE  README.md  requirements.txt  setup.py
2020/: setup.py
2020/app/: cli.py  d1.py  d10.py  d11.py  d2.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py  helpers.py
2021/: Makefile  cli.py  setup.cfg  setup.py
2021/commands/: d1.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d161.py  d171.py  d172.py  d173.py  d2.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py
2021/modules/: config.py  fileutils.py  itertools.py  utils.py
2021/templates/: default.py.tpl
2022/: day-01.py  day-02.py  day-03.py  day-04.py  day-05.py  day-05.txt  day-06.py  day-07.py  day-08.py  day-09.py  day-10.py  day-11.py  mastermind.py  temp.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py
bad-examples/: day-13-1.py  day-13-2.py  day-14-1.py  day-14-2.py  day-2-1.py  day-2-2.py  day-3-1.py  day-3-2.py  day-4-1.py  day-4-2.py  day-5-1.py  day-5-2.py  template.py
bad-examples/utils/: __init__.py
core/: __version__.py  aoc.py  year_1_executors.py  year_2015_executors.py  year_2019_executors.py
core/data/: 2015.12.txt  2019.1.txt
core/functions/: __init__.py
core/intcode/: __init__.py
core/intcode/operations/: adder.py  utils.py
polyglot/2021/: Makefile
polyglot/2021/data/: day-ex-10.txt  day-ex-11.txt  day-ex-12.txt  day-ex-13.txt
polyglot/2021/js/: index.js  package-lock.json  package.json
polyglot/2021/php/: cli.php  composer.json
polyglot/2021/templates/: default.js.tpl
polyglot/2021/utils/: fetch.py
(+4 files in other folders)
