[metadata]
name = ap-aoc-2021
author = Anna Poulakos
author_email = anna.poulakos@gmail.com
url = https://github.com/annapoulakos/advent-of-code
description = Advent of Code 2021
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
setup_requires =
    setuptools_scm
install_requires =
    click==8.0.3

[options.entry_points]
console_scripts=
    aoc = cli:cli
